k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: book-manager
  labels:
    name: book-manager
    app: book-manager
